# PazuResource

./: .gitignore  .gitmodules  CMakeLists.txt  PazuResource.code-workspace  README.md
Pazu/: Resource.hpp  Resource.inl
Pazu/Generator/: Main.cpp  ResourceGenerator.cpp  ResourceGenerator.hpp  ResourceGenerator.inl  ResourceGeneratorLauncher.cpp  ResourceGeneratorLauncher.hpp  ResourceGeneratorWorker.cpp  ResourceGeneratorWorker.hpp  ResourceListGenerator.cpp  ResourceListGenerator.hpp  ResourceListGenerator.inl  ResourceNames.hpp
Resource/: Resource.hpp
Resource/Generator/: Main.cpp  ResourceGenerator.cpp  ResourceGenerator.inl  ResourceNames.hpp
SampleAssets/: Res.txt
SampleAssets/Disk/SubDir1/: DiskRes2.txt  DiskRes2.txt.res
SampleAssets/Disk/SubDir1/SubDir3/: DiskRes3.txt.res
SampleAssets/Disk/SubDir2/: DiskRes4.txt.res
samples/: Res.txt  Res2.txt
